# 0xShare

./: .npmrc  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
core/: Cargo.toml
core/src/: engine.rs  hasher.rs  lib.rs  types.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/components/: Dashboard.svelte  StatusBar.svelte
src/: App.tsx  index.css
src/lib/: crypto.ts  fileio.ts  supabase.ts
