[package]
name = "oxshare-core"
version = "0.1.0"
edition = "2021"
authors = ["0xShare Team"]
description = "High-performance computation engine for decentralized data sharing"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"

[features]
default = []
wasm = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
